- save images fucntion

--- a/client/src/app/face-detection/face-detection.component.scss
+++ b/client/src/app/face-detection/face-detection.component.scss
@@ -19,3 +19,25 @@ canvas {
   top: 0;
   left: 0;
 }
+
+button {
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 4rem;
+  font-weight: bold;
+  background-color: red;
+  border-radius: 10px;
+  padding: 0.5rem 3rem;
+  border: none;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  text-wrap: nowrap;
+  z-index: 10000;
+
+  span {
+      font-size: 1.5rem;
+  }
+}
