--- a/client/src/app/face-detection/face-detection.component.html
+++ b/client/src/app/face-detection/face-detection.component.html
@@ -2,4 +2,7 @@
   <video #videoElement width="1020" height="860" autoplay muted></video>
   <canvas #canvasElement width="1020" height="860"></canvas>
 </div>
-<button (click)="saveImage()">Save Face Image</button>
+<button (click)="saveImage()">
+  JOIN THE RIDE
+  <span>(hit SPACE or Enter)</span>
+</button>
