--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,25 +1,23 @@
 .container {
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
     position: relative;
     overflow: hidden;
-    background: white url("https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTJ0MnA5ZzI2MDhqNGRwMDJoeDg1MDc3bjlwaW9hYnl0bnF5OG43ZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/FoVi0LDjy1XS8/giphy.gif") no-repeat center; 
+    // background: white url("https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTJ0MnA5ZzI2MDhqNGRwMDJoeDg1MDc3bjlwaW9hYnl0bnF5OG43ZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/FoVi0LDjy1XS8/giphy.gif") no-repeat center; 
     background-size: cover;
+    
+    .convoy-container {
+      display: flex;
+      align-items: center;
+      height: 200px;
+      position: absolute;
+      top: 40%;
+    }
+  
   }
   
-  .object {
-    width: 620px;
-    height: 520px;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    transform: translateY(-105%);
-    display: flex;
-    gap: 20px;
 
-
-  }
-
+  
   .santa {
     // transition: all 0.5s;
 
