--- a/client/src/app/wagon/wagon.component.html
+++ b/client/src/app/wagon/wagon.component.html
@@ -1,3 +1,9 @@
-<div>
-    <img [width]="width()" src="../assets/images/wagon.png" alt="">
+<div [style.width]="width()" class="wagon-wrapper">
+    <img class="wagon-image" [width]="width()" src="../assets/images/wagon.png" alt="">
+    <div class="passengers">
+        @for (image of passengerImages(); track $index) {
+            <img class="passenger" [src]="'https://192.168.1.3:4201/clientImages/'+image" alt=""> 
+        }
+    </div>
+
 </div>
