--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,9 +1,9 @@
 .container {
-    width: 100dvw;
-    height: 100dvh;
+    width: 100vw;
+    height: 100vh;
     position: relative;
     overflow: hidden;
-    // background: white url("https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTJ0MnA5ZzI2MDhqNGRwMDJoeDg1MDc3bjlwaW9hYnl0bnF5OG43ZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/FoVi0LDjy1XS8/giphy.gif") no-repeat center; 
+    background: url("../assets/images/back1.jpg") no-repeat; 
     background-size: cover;
     
     .convoy-container {
@@ -11,7 +11,7 @@
       align-items: center;
       height: 200px;
       position: absolute;
-      top: 40%;
+      bottom: 10px;
     }
   
   }
