--- a/client/src/app/passenger/passenger.component.html
+++ b/client/src/app/passenger/passenger.component.html
@@ -2,7 +2,7 @@
     <div class="face" [ngClass]="{
         'santa': type === passengerType.santa, 'penguin': type === passengerType.penguin, 'snowman': type === passengerType.snowman, 'deer': type === passengerType.deer,
         }">
-        <img [src]="passengerImage()" alt="">
+        <img [width]="140" [height]="160" [src]="passengerImage()" alt="">
     </div>
     <img [width]="240" [height]="400" [src]="'../assets/images/'+type+'.png'" alt="">
 </div>
