--- a/client/src/app/station/station.component.scss
+++ b/client/src/app/station/station.component.scss
@@ -3,6 +3,13 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    position: fixed;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
 }
 
 .camera-frame {
@@ -11,13 +18,62 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
-img {
-    width: 100%;
-    height: 100%;
+
+.frame-wrapper {
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     pointer-events: none;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+}
+
+
+.alert-banner  {
+    z-index: 99999;
+    height: 150px;
+    font-size: 48px;
+    position: fixed;
+    top: -150px;
+    left: 0;
+    right: 0;
+    background-color: rgb(0, 158, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-weight: bold;
+    color: white;
+    transition: all 0.5s ease-in-out;
+    &.visible {
+        top: 0;
+    }
+
+}
+
+.join-banner  {
+    z-index: 999;
+    height: 150px;
+    font-size: 48px;
+    position: fixed;
+    top: -150px;
+    left: 0;
+    right: 0;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-weight: bold;
+    color: white;
+    transition: all 0.5s ease-in-out;
+    &.visible {
+        top: 0;
+    }
+
 }
