--- a/client/src/app/train-engine/train-engine.component.html
+++ b/client/src/app/train-engine/train-engine.component.html
@@ -1,3 +1,6 @@
 <div>
     <img [width]="width()" src="../assets/images/train_engine.png" alt="">
 </div>
+
+
+<img class="stella" src="../../assets/images/stella_scooter.png" alt="">
