--- a/client/src/app/train-engine/train-engine.component.html
+++ b/client/src/app/train-engine/train-engine.component.html
@@ -3,4 +3,4 @@
 </div>
 
 
-<img class="stella" src="../../assets/images/stella_scooter.png" alt="">
+<!-- <img class="stella" src="../../assets/images/stella_scooter.png" alt=""> -->
