--- a/client/src/app/station/station.component.scss
+++ b/client/src/app/station/station.component.scss
@@ -14,14 +14,14 @@
 
 .camera-frame {
     position: absolute;
-    top: 50%;
+    top: calc(50% + 100px);
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .frame-wrapper {
     position: fixed;
-    top: 0;
+    top: 150px;
     bottom: 0;
     left: 0;
     right: 0;
